--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@j.u.p.iter/find-path-to-file": "^1.0.1",
-    "@j.u.p.iter/in-files-cache": "^1.0.0",
-    "@j.u.p.iter/system-error-code": "^1.0.0"
+    "@j.u.p.iter/in-files-cache": "^1.3.0",
+    "@j.u.p.iter/system-error-code": "^1.0.0",
+    "fs-extra": "^9.0.1"
   }
 }
