test(TSConfig): fixes tests

--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "start": "yarn run build --watch",
     "lint": "jupiter-scripts lint --format codeFrame",
     "lint:fix": "yarn run lint --fix",
-    "test": "jupiter-scripts test"
+    "test": "jupiter-scripts test --runInBand"
   },
   "devDependencies": {
     "@j.u.p.iter/jupiter-scripts": "^1.17.0"
   },
   "dependencies": {
+    "@j.u.p.iter/custom-error": "^1.4.1",
     "@j.u.p.iter/find-path-to-file": "^1.0.1",
-    "@j.u.p.iter/in-files-cache": "^1.3.0",
+    "@j.u.p.iter/in-files-cache": "^1.3.1",
     "@j.u.p.iter/system-error-code": "^1.0.0",
     "fs-extra": "^9.0.1",
     "typescript": "^4.1.3"
