--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "test": "jupiter-scripts test --runInBand"
   },
   "devDependencies": {
-    "@j.u.p.iter/jupiter-scripts": "^1.17.0"
+    "@j.u.p.iter/jupiter-scripts": "^1.17.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@j.u.p.iter/custom-error": "^1.4.1",
     "@j.u.p.iter/find-path-to-file": "^1.0.1",
     "@j.u.p.iter/in-files-cache": "^1.3.1",
     "@j.u.p.iter/system-error-code": "^1.0.0",
-    "fs-extra": "^9.0.1",
-    "typescript": "^4.1.3"
+    "fs-extra": "^9.0.1"
   }
 }
